# dark-physics

./: .CodeCoverage.cmake  .gitignore  CMakeLists.txt  Doxyfile.in  README.md  TODO  plot-x-mj.gpi
include/: APrimeEmMixingProcess.hh  APrimeParticle.hh  APrimeScatteringModel.hh  dphmc-config.h.in  dphmc-inspection.h  dphmc-integrw.h  dphmc-rnd.h
include/models/: ww-approx.h  ww-approx.hh
src/: APrimeEmMixingProcess.cc  APrimeParticle.cc  dphmc-inspection.c  dphmc-integrw.c  dphmc-rnd.c
src/models/: ww-approx.c  ww-approx.cc  ww-approx.cpp
tests/: CMakeLists.txt  README.md
tests/common/include/: dphmc-hst.hh  dphmc-test-app.hh  dphmc-test-aprime-ww.hh  dphmc-test-aprime-ww.hpp  dphmc-test-fixture.hh  dphmc-test-mj-fixture.hpp
tests/common/src/: dphmc-hst.cc  dphmc-test-app.cc  dphmc-test-aprime-ww.cc  dphmc-test-aprime-ww.cpp  dphmc-test-fixture.cc
tests/plots/: plot-x-mj-x-1.gpi  plot-x-mj.gpi
tests/units/: CMakeLists.txt  main.cpp  rand-api.cpp  ww-chi.cpp  ww-mj.cpp  ww-model.cpp
tests/utils/: CMakeLists.txt  aprime-math.cpp  ww-mj.cpp
